Upgrade to JDK 22